Temp Work 2 - Interfaces and implementation.

--- a/extensions/src/main/resources/org/pentaho/platform/plugin/services/messages/messages.properties
+++ b/extensions/src/main/resources/org/pentaho/platform/plugin/services/messages/messages.properties
@@ -121,6 +121,7 @@ PluginManager.PLUGIN_LIFECYCLE_LISTENER_FAILED_TO_LOAD=Lifecycle listener for pl
 PluginManager.NO_SERVICE_CLASS_FOUND=Web service could not be registered.  No service class was defined.
 PluginManager.WARN_CLASS_NOT_REGISTERED=No class registered for id {0}
 PluginManager.WARN_WRONG_BEAN_FACTORY_TYPE=Your test bean factory does not implement ConfigurableBeanFactory which means we cannot provide it the correct classloader.  Consider using DefaultListableBeanFactory
+PluginManager.WARN_FACET_XML_READER_INVALID_DATA=Facet XML reader {1} returned either null data or data which is of an invalid type for plugin {0}. 
 PluginManager.WARN_CSRF_REQUEST_MATCHER_NOT_REGISTERED=CSRF protection for request matcher of plugin {0} could not be registered. {1}
 PluginResourceLoader.WARN_CLASS_LOADED_OUTSIDE_OF_PLUGIN_ENV=The system does not recognize the class you have provided [{0}] as a plug-in class since it was not loaded from a {1}.  If {0} is in fact part of your plugin, it could be that you are running in a test environment.  In such case the recommended approach is to use a test subclass of {2} that overrides the getOverrideClassLoader() method to return a proper {1}.
 PluginClassLoader.WARN_COULD_NOT_LOAD_JAR=Could not load jar: {0}
